frameworks: Add support for advanced restart options
Change-Id: I4b35d10b0811eff0d8e9ab68b2aedbe52b4aa53f
Co-Authored-By: Bruno Martins <bgcngm@gmail.com>
Co-Authored-By: Dave Kessler <activethrasher00@gmail.com>
Co-Authored-By: DvTonder <david.vantonder@gmail.com>
Co-Authored-By: Jorge Ruesga <jorge@ruesga.com>
Co-Authored-By: maxwen <max.weninger@gmail.com>
Co-Authored-By: Ricardo Cerqueira <cyanogenmod@cerqueira.org>
Co-Authored-By: Roman Birg <roman@cyngn.com>
Co-Authored-By: SagarMakhar <sagarmakhar@gmail.com>
Co-Authored-By: Veeti Paananen <veeti.paananen@rojekti.fi>
Co-Authored-By: Zhao Wei Liew <zhaoweiliew@gmail.com>

--- a/core/res/res/values/aospa_symbols.xml
+++ b/core/res/res/values/aospa_symbols.xml
@@ -134,4 +134,7 @@
     <!-- Udfps animation package -->
     <java-symbol type="string" name="config_udfps_animation_customization_package" />
 
+    <!-- Power menu -->
+    <java-symbol type="array" name="config_restartActionsList" />
+
 </resources>
