policy: Add support for device alert sliders.
* Provide support for alert slider hardware.
  Ability to swap order of alert slider within system setting.
  Enable setting config_hasAlertSlider to true and defining
  proc nodes for state path and UEvent match path.

 * Contributors:
 @Sirhc95
 @ZVNexus
 @carlosavignano
 @thecrazyskull

Change-Id: I762a3e6f5f31b50cd96130a71ad263d5b9f1161e

--- a/core/res/res/values/aospa_config.xml
+++ b/core/res/res/values/aospa_config.xml
@@ -29,6 +29,9 @@
     <string-array name="config_forceEnabledComponents" translatable="false">
     </string-array>
 
+    <!-- Whether device has an alert slider. -->
+    <bool name="config_hasAlertSlider">false</bool>
+
     <!-- Defines the sysfs attribute path used by the device
          to enable/disable DC dimming. -->
     <string name="config_deviceDcDimmingSysfsNode"></string>
