--- a/packages/SystemUI/res/values/aospa_strings.xml
+++ b/packages/SystemUI/res/values/aospa_strings.xml
@@ -52,5 +52,6 @@
     <!-- Label for current user in power menu options dialog -->
     <string name="global_action_current_user">Current</string>
     <string name="global_action_users">Users</string>
+    <string name="global_action_panic">Panic trigger</string>
 
 </resources>
