--- a/packages/SystemUI/res/values/aospa_dimens.xml
+++ b/packages/SystemUI/res/values/aospa_dimens.xml
@@ -26,4 +26,7 @@
     <dimen name="udfps_animation_size">280dp</dimen>
     <dimen name="udfps_animation_offset">0dp</dimen>
 
+    <!-- Largest size an avatar might need to be drawn in the power menu user picker -->
+    <dimen name="global_actions_avatar_size">24dp</dimen>
+
 </resources>
