[SQUASH] base: Add option to cycle through ringer modes [1/2]
* Settings->System->Gestures->Prevent ringing

core: Remove @SystemApi annotation for VOLUME_HUSH_CYCLE.

  This addition should not be annotated with @SystemApi because it
  creates an addition that fails the API test in user builds

Signed-off-by: rituj <ritujbeniwal@gmail.com>
Co-authored-by: Evan Anderson <evananderson@aospa.co>
Change-Id: I334bd165e970665ac5300d387a0ea6745748d3ad

--- a/core/res/res/values/aospa_symbols.xml
+++ b/core/res/res/values/aospa_symbols.xml
@@ -35,4 +35,7 @@
     <java-symbol type="string" name="config_deviceDcDimmingEnableValue" />
     <java-symbol type="string" name="config_deviceDcDimmingDisableValue" />
 
+    <!-- Cycle through ringer modes -->
+    <java-symbol type="string" name="volume_dialog_ringer_guidance_normal" />
+
 </resources>
