SystemUI: Conditionally disable Wifi/Hotspot standard numbering
Uses a boolean to conditionally disable/enable this feature. It is disabled by default

[Jyotiraditya Panda <jyotiraditya@aospa.co>]:
 - Forward port to Android 13.
 - Cleanup code.
[Sirhc95 - Minimalize code]
[ghostrider-reborn: adapt to refactored wifi standard]

Change-Id: I88f0f61e65d406e52ca41c7df3e93c39b2d55036
Co-Authored-By: Jyotiraditya Panda <jyotiraditya@aospa.co>
Co-Authored-By: Hernán Castañón <herna@paranoidandroid.co>
Signed-off-by: Jyotiraditya Panda <jyotiraditya@aospa.co>
Signed-off-by: Hernán Castañón Álvarez <herna@paranoidandroid.co>
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>

--- a/core/res/res/values/aospa_symbols.xml
+++ b/core/res/res/values/aospa_symbols.xml
@@ -127,4 +127,8 @@
     <!-- Status bar DT2S gesture -->
     <java-symbol type="bool" name="config_dt2sGestureAvailable" />
     <java-symbol type="bool" name="config_dt2sGestureEnabledByDefault" />
+
+    <!-- Whether to show WiFi/Hotspot standard -->
+    <java-symbol type="bool" name="config_show_network_standard" />
+
 </resources>
