--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -3665,6 +3665,7 @@
          "logout" =  Logout the current user
          "system_update" = Launch System Update screen
          "panic" = Trigger a panic
+         "restart_systemui" = restart systemui
          -->
     <string-array translatable="false" name="config_globalActionsList">
         <item>emergency</item>
@@ -3675,6 +3676,7 @@
         <item>screenshot</item>
         <item>bugreport</item>
         <item>panic</item>
+        <item>restart_systemui</item>
     </string-array>
 
     <!-- Number of milliseconds to hold a wake lock to ensure that drawing is fully
