--- a/packages/SystemUI/res/values/aospa_strings.xml
+++ b/packages/SystemUI/res/values/aospa_strings.xml
@@ -53,5 +53,6 @@
     <string name="global_action_current_user">Current</string>
     <string name="global_action_users">Users</string>
     <string name="global_action_panic">Panic trigger</string>
+    <string name="global_action_restart_systemui">SystemUI</string>
 
 </resources>
