--- a/packages/SystemUI/res/values/aospa_dimens.xml
+++ b/packages/SystemUI/res/values/aospa_dimens.xml
@@ -29,4 +29,6 @@
     <!-- Largest size an avatar might need to be drawn in the power menu user picker -->
     <dimen name="global_actions_avatar_size">24dp</dimen>
 
+    <!-- Size to enlarge Enrollment GHBM Dot Size by in DP. -->
+    <dimen name="udfps_enroll_dot_additional_size">0dp</dimen>
 </resources>
