--- a/core/res/res/values/aospa_symbols.xml
+++ b/core/res/res/values/aospa_symbols.xml
@@ -97,6 +97,7 @@
     <!-- PropImitationHooks -->
     <java-symbol type="array" name="config_certifiedBuildProperties" />
     <java-symbol type="string" name="config_stockFingerprint" />
+    <java-symbol type="bool" name="config_spoofasTablet" />
 
     <!-- Location indicator -->
     <java-symbol type="drawable" name="stat_sys_location" />
