--- a/packages/SystemUI/bcsmartspace/res/layout/smartspace_card_date.xml
+++ b/packages/SystemUI/bcsmartspace/res/layout/smartspace_card_date.xml
@@ -17,7 +17,6 @@
 <com.google.android.systemui.smartspace.BcSmartspaceCard
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingTop="@dimen/enhanced_smartspace_padding_top"
     android:layout_width="match_parent"
     android:layout_height="@dimen/enhanced_smartspace_card_height"
     android:baselineAligned="false">
@@ -54,7 +53,7 @@
         <LinearLayout
             android:id="@+id/smartspace_extras_group"
             android:orientation="horizontal"
-            android:visibility="invisible"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
