base: Add udfps animation customization
Change-Id: I7c2eb51a786f23a600183ae834f6c455de75a43d

Bring back UDFPS animation

neobuddy89: Adapted for Android 12L
Stallix - Adapted for A13 QPR1

Co-authored-by: Pranav Vashi <neobuddy89@gmail.com>
Co-authored-by: jhonboy121 <alfredmathew05@gmail.com>
Co-authored-by: daniml3 <danimoral1001@gmail.com>
Co-authored-by: DennySPb <dennyspb@gmail.com>
Co-authored-by: kondors1995 <normandija1945@gmail.com>
Co-authored-by: jhenrique09 <jhenrique09.mcz@hotmail.com>
Co-authored-by: Hikari-no-Tenshi <Hikari-no-Tenshi@users.noreply.github.com>
Co-authored-by: TheScarastic <warabhishek@gmail.com>
Co-authored-by: nullxception <nullxception@users.noreply.github.com>
Co-authored-by: Joey Huab <joey@evolution-x.org>
Co-authored-by: 00day0 <00day0@users.noreply.github.com>

[Dhina17]
- Drop Udfps icon customization
- Move to Settings.Secure.
- Use ContentObserver instead of TunerService

Change-Id: I0f0fcde998ad3d80f22f76f7136f141331ca6c7c

SystemUI: Update udfps animation position on sensor props change

The proper way.

Change-Id: I030f50877e30fbcade5d22a9326b6322e45732d5

fwb: Config udfps animation package via res

Change-Id: I4949a05d8703b1f1142df08c475754ae634d4555

SystemUI: Simplify udfps animation style selection

if you want to disable the animation, add none or any string as (which don't have drawables)
item in the index (which you consider as disabled value)
of the arrays in the animation package.

Example:
I added <item>None</item> to the arrays in the index 0
since I want to use 0 as disabled value.

I don't have any drawables in the name of "None" in the
udfps animation package.
It's important to make sure.

Change-Id: I4fe1e34fb3402ed2168fc7d8f15a69fb4084faf3

SystemUI: Make sure the udfps animation is hidden on the bouncer

When pressing the udfps icon repetively for some time, it will enter primary bouncer.
While launching bouncer, Somehow touch event ACTION_DOWN passes the checks in newOnTouch()
and invokes onFingerDown()

--- a/core/res/res/values/aospa_symbols.xml
+++ b/core/res/res/values/aospa_symbols.xml
@@ -131,4 +131,7 @@
     <!-- Whether to show WiFi/Hotspot standard -->
     <java-symbol type="bool" name="config_show_network_standard" />
 
+    <!-- Udfps animation package -->
+    <java-symbol type="string" name="config_udfps_animation_customization_package" />
+
 </resources>
