--- a/packages/SystemUI/res/values/aospa_dimens.xml
+++ b/packages/SystemUI/res/values/aospa_dimens.xml
@@ -21,4 +21,9 @@
 
     <!-- HD calling icon -->
     <dimen name="signal_icon_viewport_size">24dp</dimen>
+
+    <!-- Udfps fingerprint animation -->
+    <dimen name="udfps_animation_size">280dp</dimen>
+    <dimen name="udfps_animation_offset">0dp</dimen>
+
 </resources>
