SystemUI: Blur the background of SysUI dialogs
Change-Id: I8cb93e45c83a60d9d6732c578c402652a59b493d
[nurkeinneid: Adapt global actions]
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/core/res/res/values/aospa_dimens.xml
+++ b/core/res/res/values/aospa_dimens.xml
@@ -33,4 +33,8 @@
     <dimen name="net_traffic_single_text_size">14sp</dimen>
     <dimen name="net_traffic_multi_text_size">8sp</dimen>
 
+    <!-- Blur radius used by SystemUI -->
+    <dimen name="min_window_blur_radius">1px</dimen>
+    <dimen name="max_window_blur_radius">17.5dp</dimen>
+
 </resources>
