--- a/core/res/res/values/aospa_symbols.xml
+++ b/core/res/res/values/aospa_symbols.xml
@@ -137,4 +137,8 @@
     <!-- Power menu -->
     <java-symbol type="array" name="config_restartActionsList" />
 
+    <!-- Blur radius used by SystemUI -->
+    <java-symbol type="dimen" name="min_window_blur_radius" />
+    <java-symbol type="dimen" name="max_window_blur_radius" />
+
 </resources>
